Fix dog-info position mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -874,6 +874,6 @@ html, body
     padding: 0px
     .dog-info
       position: relative
-      top: -10px
+      top: -12px
       border-top-right-radius: 4px
       border-top-left-radius: 4px
